styles/style.css
/* Arquivo CSS para o portfólio */
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body{
    width: 100%;
    font-family: 'Times New Roman', Times, serif;
    display: flex;
    flex-direction: column;
    margin: 0;
    padding: 0;
    background: linear-gradient(to bottom, 
    #000000 0%,     /* Começa preto */
    #000000 57%,    /* Vai até 50% da altura como preto */
    #14e7ff 100%    /* De 50% até o final como verde neon */);
    color: rgb(255, 255, 255);
}

main{
    flex: 1;
    display: flex;
    flex-direction: column;
    padding: 20px;
    margin: 0 auto;
    width: 100%;
}

header{
    background-color: rgb(0, 0, 0);
    padding: 20px 60px;
    display: flex;
    justify-content: space-between;
    width: 100vw;
    max-width: 100%;
    box-sizing: border-box;
}
a{
    text-decoration: none;
    color: #f0f0f0;
}
header>h1{
    flex: 1;
    font-size: 2em;
    margin: 0;
    color: #f0f0f0;
}

.nav-links{
    display: flex;
    justify-content: flex-end;
    gap: 30px;
    list-style: none;
    margin: auto;
    padding: 0;
}

.nav-links>li{
    display: inline;
    font-size: 1.2em;
    color: #f0f0f0;
    text-decoration: none;
    padding: 10px;
    border-radius: 5px;
    background-color: rgba(0, 0, 0, 0.8);
}
nav>ul>li:hover{
    background-color: #14e7ff;
    border-radius: 5px;
    padding: 10px;
}

section.intro{
    padding: 20px;
    text-align: center;
    display: flex;
}

section.intro>div{
    flex: 1;
    padding: 20px;
    border-radius: 10px;
    text-align: justify;
    color: aliceblue;
    background-color: rgba(0, 0, 0, 0.8);
    box-shadow: 0 4px 8px rgb(2, 2, 0);
    margin: auto 10px;
    width: 100%;
    height: 300px;
}

section.intro>div>h2{
    font-size: 1.8em;
}

div.intro-image{
    flex: 1;
    display: flex;
    justify-content: center;
    align-items: center;
    max-width: fit-content;
}

#my-image{
    width: 300px;
    height: auto;
    border-radius: 20%;
    border: 2px solid #14e7ff;
    box-shadow: 0 0 5px #14e7ff;
}

/* Seção de Projetos */

.project-text{
    text-align: center;
    padding: 20px;
    font-size: 14pt;
    color: #f0f0f0;
    margin-top: 20px;
    background-color: rgba(0, 0, 0, 0.893);
    border-radius: 10px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

#calculator-div{
    max-width: 100%;
    width: 850px;
    flex-wrap: wrap;
    display: flex;
    justify-content: left;
    align-items: center;
    gap: 20px;
    text-align: justify;
    padding: 10px;
}

#login-div{
    max-width: 1000px;
    flex-wrap: wrap;
    display: flex;
    justify-content: left;
    align-items: center;
    gap: 20px;
    text-align: justify;
    padding: 10px;
}

.project-text a{
    color: #14e7ff;
    text-decoration: underline;
}

.project-text a:hover{
    color: #ffffff;
}


.project-image {
    border-radius: 12px;
    box-shadow: 0 0 5px #000000;
    transition: transform 0.3s ease;
}

.project-image:hover {
    transform: scale(1.05);
}

.project-links {
    display: flex;
    justify-content: center;
    gap: 100px;
    padding: 5px;
    margin-top: 5px;
}
footer{
    background-color: rgb(2, 2, 9);
    padding: 20px;
    text-align: center;
    color: #f0f0f0;
    bottom: 0;
    width: 100%;
}

/* Responsividade */

@media (max-width: 1450px) {
    body {
        width: 100%;
    }
    header {
        flex-direction: column;
        align-items: center;
    }
    .nav-links {
        flex-direction: row;
        align-items: center;
        gap: 10px;
    }
    section.intro {
        flex-direction: column;
    }
    section.intro > div {
        width: 90%;
        margin: 10px auto;
    }

    div.intro-image{
        display: flex;
        justify-content: center;
        align-items: center;
        max-width: 100%;
    }
    #my-image {
        max-width: 50%;
    }
}

@media (max-width: 700px) {
    body {
        width: 100%;
        align-items: center;
    }
    header {
        flex-direction: column;
        gap: 0;
        align-items: center;
        width: 100%;
    }

    h1 {
        font-size: 1.5em;
        margin: 0;
        padding: 0;
        color: #f0f0f0;
        display: flex;
        justify-content: center;
        align-items: center;
        width: 100%;
    }

    nav {
        width: 100%;
        display: flex;
        justify-content: center;
        text-align: center;
        padding: 0;
        margin: 0;
    }
    .nav-links {
        flex-direction: row;
        align-items: center;
        gap: 10px;
    }
    section.intro {
        flex-direction: column;
    }
    section.intro > div {
        width: 100%;
        margin: 10px auto;
    }
    #my-image {
        max-width: 100%;
    }
    .project-image {
        flex-direction: column;
        align-items: center;
        width: 50%;
    }
    .project-text {
        font-size: 1em;
        padding: 10px;
    }
    .project-links {
        flex-direction: column;
        align-items: center;
        gap: 10px;
    }
    #calculator-div, #login-div {
        flex-direction: column;
        align-items: center;
        max-width: 100%;
        flex-wrap: wrap;
    }

    .project-links a {
        font-size: 1.2em;
    }
    footer {
        font-size: 12px;
        padding: 10px;
        width: 100%;
    }
    .nav-links > li {
        font-size: 1em;
        padding: 5px;
    }
    section.intro > div {
        height: auto;
        padding: 10px;
    }

    .project-text a {
        font-size: 1em;
        word-break: break-all;
    }

    #projects {
        width: 100%;
        padding: 10px;
    }
}

